Fix cropper

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -4070,72 +4070,78 @@ div.code input#code {
 // grab bootsrap need delete
 
 .panel-primary {
-    border-color: #337ab7;
+  border-color: #337ab7;
 }
-.panel-primary>.panel-heading {
-    color: #fff;
-    background-color: #337ab7;
-    border-color: #337ab7;
+
+.panel-primary > .panel-heading {
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #337ab7;
 }
 
 .panel-success {
-    border-color: #d6e9c6;
+  border-color: #d6e9c6;
 }
-.panel-success>.panel-heading {
-    color: #3c763d;
-    background-color: #dff0d8;
-    border-color: #d6e9c6;
+
+.panel-success > .panel-heading {
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
 }
+
 .panel-heading {
-    padding: 10px 15px;
-    border-bottom: 1px solid transparent;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+  padding: 10px 15px;
+  border-bottom: 1px solid transparent;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
+
 .panel-title {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 16px;
-    color: inherit;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 16px;
+  color: inherit;
 }
 
 .panel {
-    margin-bottom: 20px;
-    background-color: #fff;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  margin-bottom: 20px;
+  background-color: #fff;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
 
 .label-primary {
-    background-color: #337ab7;
+  background-color: #337ab7;
 }
+
 .label {
-    display: inline;
-    padding: .2em .6em .3em;
-    font-size: 75%;
-    font-weight: 700;
-    line-height: 1;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: .25em;
+  display: inline;
+  padding: .2em .6em .3em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
 }
+
 .well {
-    min-height: 20px;
-    padding: 19px;
-    margin-bottom: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-    & > span {
-      font-size: 1.5em;
-      line-height: 3em;
-    }
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  & > span {
+    font-size: 1.5em;
+    line-height: 3em;
+  }
 }
 
 .grid_block {
@@ -4146,5 +4152,28 @@ div.code input#code {
   }
   & .col-sm-4 {
     width: 32%;
+  }
+}
+
+.cropper-crop-box {
+  overflow: hidden;
+  padding: 2px;
+  & .cropper-line.line-e {
+    position: absolute;
+    top: 0;
+    right: -3px;
+    left: auto;
+    width: 5px;
+    cursor: e-resize;
+  }
+  & .cropper-face {
+    top: -50px;
+    left: -50px;
+    opacity: 1 !important;
+    background: transparent !important;
+  }
+  & .cropper-face, & .cropper-viewer {
+    border-radius: 50%;
+    border: 50px solid rgba(0, 0, 0, 0.3);
   }
 }
